# polyana

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
audio-capture/: Cargo.toml  Makefile.toml
audio-capture/src/: lib.rs  main.rs
audio-playback/: Cargo.toml
audio-playback/src/: lib.rs  main.rs
client/: Cargo.toml
client/src/: config.rs  input.rs  main.rs  opus.rs  output.rs
common/: Cargo.toml
common/src/: lib.rs  msg.rs  sample.rs
gui/: Cargo.toml
gui/src/: main.rs
server/: Makefile.toml
