[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-playback = { version = "0.1.0", path = "../audio-playback" }
cpal = { git = "https://github.com/RustAudio/cpal.git", version = "0.13.5" }
