[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-playback = { version = "0.1.0", path = "../audio-playback" }
common = { version = "0.1.0", path = "../common" }
cpal = "0.13.5"
flume = "0.10.14"
